# codebadger

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.mcp  README.md  cleanup.sh  config.example.yaml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
docs/: README.md  architecture.md  available-tools.md  configuration.md  contributing.md  custom-tools.md  deployment.md  installation.md  roadmap.md  security.md  usage.md
examples/: sample_client.py
scripts/: deploy.sh  recommend_config.py
src/: __init__.py  config.py  defaults.py  exceptions.py  health.py  models.py  startup_tuning.py  telemetry.py  utils.py
src/services/: __init__.py  code_browsing_service.py  codebase_tracker.py  coordination.py  cpg_generator.py  (+6 more)
tests/: __init__.py  test_autodetect_includes.py  test_build_opts.py  test_build_scoping.py  test_cache_key.py  test_common_helpers.py  test_compile_db.py  test_compose_security.py  test_config.py  test_coordination.py  test_cpg_generator.py  test_db_manager.py  test_detectors_live.py  test_durable_queue.py  test_durable_queue_worker.py  test_health.py  test_joern_client_load.py  test_logging.py  test_main.py  test_mcp_tools.py  test_memory_admission.py  test_models.py  test_normalize_query.py  test_null_pointer_deref.py  test_pool_memory_guard.py  test_pool_store_redis.py  test_postgres_db_manager.py  test_postgres_job_store.py  test_program_slice.py  test_prompts.py  test_query_executor_limits.py  test_query_loader.py  test_resolve_host_path.py  test_restart_scheduling.py  test_source_fingerprint.py  test_startup_tuning.py  test_taint_tools.py  test_taint_tools_usability.py  test_toctou.py  test_validators.py  (+3 more)
(+59 files in other folders)
