[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codebadger"
version = "0.6.1b0"
description = "Containerized MCP server exposing Joern Code Property Graphs for program and vulnerability analysis."
readme = "README.md"
requires-python = ">=3.10"  # PEP 604 union syntax (str | None) is used throughout
license = { file = "LICENSE" }
# Runtime dependencies are pinned in requirements.txt (the install source for the
# Docker images); declared here dynamically as the canonical list for tooling.
dynamic = ["dependencies"]

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.black]
line-length = 88
target-version = ['py310']  # matches requires-python floor; was py38
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "docker.*",
    "git.*",
    "mcp.*",
    "pytest.*"
]
ignore_missing_imports = true